--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div class="container text-center">
         <h4>Use the search bar below to display current information for the country of your choice.</h4>
         <p>All data are mined from <a href="https://coronavirus.jhu.edu/" target="blank">Johns Hopkins Coronavirus
-                Resource Center</a> in <b>real time</b>.
+                Resource Center</a> in <b>real time</b> using <a href="https://covid19api.com/"
+                target="blank">https://covid19api.com/</a>.
         </p>
         <!-- Search form -->
         <form id="searchForm">
