--- a/index.html
+++ b/index.html
@@ -20,14 +20,20 @@
     <div class="container text-center">
         <h4>Use the search bar below to display current information for the country of your choice.</h4>
         <p>All data are mined from <a href="https://coronavirus.jhu.edu/" target="blank">Johns Hopkins Coronavirus
-                Resource Center</a> using <a href="https://covid19api.com/" target="blank">covid19api.com</a> in <b>real
-                time</b>.
+                Resource Center</a> in <b>real time</b>.
         </p>
         <!-- Search form -->
-        <form id="searchForm">
-            <input id="countryname" name="countryname" class="form-control" type="text"
-                placeholder="Insert country's name here (In english)" aria-label="Search">
-            <button id='submitBtn' type="button">Show Country Data</button></form>
+        <form id="searchForm" autocomplete="off">
+            <select name="country" id="country-select">
+                <option>Please select a country </option>
+
+            </select>
+
+
+
+
+
+            <button id='submitBtn' type="button">Show Country Data</button>
     </div>
 
 
