--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 
 <body id="body">
-    <h1 class="jumbotron text-center yellow" id="banner">Welcome to <s>the official</s> my site of Covid-19 data
+    <h1 class="jumbotron text-center yellow" id="banner">Welcome to <del>the official</del> my site of Covid-19 data
         collection.</h1>
     <div class="container text-center">
         <h4>Use the search bar below to display current information for the country of your choice.</h4>
-        <p>All data are mined from <a href="https://coronavirus.jhu.edu/" target="blank">Johns Hopkins Coronavirus
+        <p>All data are mined from <a style="color:blue!important;font-size:16px;" href="https://coronavirus.jhu.edu/" target="_blank">Johns Hopkins Coronavirus
                 Resource Center</a> in <b>real time</b>.
         </p>
         <!-- Search form -->
